Dropped test network method. Added more response checks.